<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Biedra</string>
    <string name="more_actions">more actions</string>
    <string name="notifications_title">Notifications</string>
    <string name="range">range</string>
    <string name="when_shop_is_in_area">when shop is in area</string>
    <string name="navigate_to_shop">navigate to shop</string>
    <string name="address">Address: %1$s</string>
    <string name="opening_hours">Opening hours: %1$s</string>
    <string name="distance">Distance: %1$s</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="title_sundays">Sundays</string>
    <string name="settings">Settings</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="email_me">Email me</string>
    <string name="share_some_stars">Share some stars</string>
    <string name="info_text">This is not an official Biedronka&#8482; app, I have no connection with the company.
\nThis is made as my hobby pet project, digital sandbox where I can play with new libraries and stuff in my free time.
\n
\nPlease consider this when giving this app mark or leaving a comment :)
  </string>
    <string name="turn_on_location">Turn on Location</string>
    <string name="shop_closed">Shop is closed today</string>
    <string name="shopping_sundays_subtitle">The days marked in green are shopping Sundays.</string>
    <string name="location_permissions_info">App works better with location permissions granted</string>
    <string name="info">Info</string>
    <string name="search_for_shops">Search for shops</string>
    <string name="error_loading_shops">Error while loading shops</string>
    <string name="no_shops_found_use_search">No shops around, use search bar or map</string>
    <string name="use_search">Please use search box</string>
    <string name="shopping_sunday_notification">Shopping Sundays</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="notification_time">Time of notification</string>
    <string name="channel_name" translatable="false">Biedra Sundays</string>
    <string name="channel_description">Shopping sundays</string>
    <string name="shoping_sunday_seek_bar_label">How many days before?</string>
    <string name="app_version">App version</string>
    <string name="notifications">Notifications</string>
    <string name="shopping_sunday_notification_content">Next shopping Sunday is %1$s</string>
    <string name="shopping_sunday_notification_title">Shopping Sunday!</string>
    <string name="title_shop_details">Details</string>
    <string name="bakery">Bakery</string>
    <string name="relax">Relax</string>
    <string name="atm">ATM</string>
    <string name="new_shop">New shop</string>
    <string name="euro_accepted">Euro accepted</string>
    <string name="tax_free">TaxFree</string>
    <string name="card_payment">Card payments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
