<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

  <fragment
      android:id="@+id/navigation_list"
      android:name="com.hedgehog.gdzietabiedra.ui.home.HomeFragment"
      android:label="@string/title_list"
      tools:layout="@layout/fragment_home" />

  <fragment
      android:id="@+id/navigation_map"
      android:name="com.hedgehog.gdzietabiedra.ui.dashboard.DashboardFragment"
      android:label="@string/title_map"
      tools:layout="@layout/fragment_dashboard" />

  <fragment
      android:id="@+id/navigation_sundays"
      android:name="com.hedgehog.gdzietabiedra.ui.notifications.NotificationsFragment"
      android:label="@string/title_sundays"
      tools:layout="@layout/fragment_notifications" />
</navigation>