<?xml version="1.0" encoding="utf-8"?>
<com.hedgehog.gdzietabiedra.ribs.bottomnav.settings.SettingsView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:visibility="gone"
      >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_title"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        />
    <Switch
        android:id="@+id/notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/when_shop_is_in_area"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:text="@string/range"
          android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
          />
      <SeekBar
          android:id="@+id/notification_range_seekbar"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="8dp"
          />
      <TextView
          android:id="@+id/notification_range_value"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
          tools:text="1000 m"
          />

    </LinearLayout>
  </LinearLayout>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/settings_testimony"
      style="@style/TextAppearance.AppCompat.Body2"
      />
  <TextView
      android:id="@+id/settings_version_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      tools:text="2.0.0 (200001)"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      >
    <Button
        android:id="@+id/settings_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/email_me"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
    <Button
        android:id="@+id/settings_star_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/share_some_stars"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        />
  </LinearLayout>
</com.hedgehog.gdzietabiedra.ribs.bottomnav.settings.SettingsView>